# brski

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  config.ini.in  dev-config.ini.in  version.h.in
.github/workflows/: build.yml  codeql.yml
CMakeModules/: AddCTestDaemon.cmake  BrskiInstallLocations.cmake  InstallConfigFile.cmake  install.cmake
debian/: brski.install  changelog  control  copyright  libvoucher-dev.install  rules
debian/source/: local-options
docs/: array.md  brski.md  usage.md  voucher.md
lib/: cmocka.cmake  cpp-httplib.cmake  cpr.cmake  httplib.cmake  jsmn.cmake  openssl3.cmake  uWebSocket.cmake
src/: CMakeLists.txt  brski-server.cpp  brski.cpp  brski_server.cpp  config.c  config.cpp  config.h
src/brski/: CMakeLists.txt  brski.cpp  config.c  config.cpp  config.h  config.ini.in  dev-config.ini.in
src/brski/http/: CMakeLists.txt  http.h  http.hpp  httplib.h  httplib_wrapper.cpp  httplib_wrapper.h  httplib_wrapper.hpp  https_client.cpp  https_client.h  https_client.hpp  https_server.cpp  https_server.hpp
src/brski/masa/: CMakeLists.txt  masa_api.cpp  masa_api.h  masa_api.hpp  masa_config.h  masa_server.cpp  masa_server.h  masa_server.hpp  registrar_config.h
src/brski/pledge/: CMakeLists.txt  pledge_config.h  pledge_request.cpp  pledge_request.h  pledge_request.hpp  pledge_utils.c  pledge_utils.cpp  pledge_utils.h
src/brski/registrar/: CMakeLists.txt  registrar.h  registrar_api.cpp  registrar_api.h  registrar_api.hpp  registrar_config.h  registrar_server.cpp  registrar_server.h  registrar_server.hpp
src/http/: CMakeLists.txt  http.h  httplib_wrapper.cpp  httplib_wrapper.h  https_server.cpp  https_server.h
src/registrar/: CMakeLists.txt  registrar.h  registrar_api.cpp  registrar_api.h  registrar_routes.cpp  registrar_routes.h  registrar_server.cpp  registrar_server.h
src/utils/: CMakeLists.txt  allocs.c  allocs.h  https_server.cpp  https_server.h  log.h  os.c  os.h
src/voucher/: CMakeLists.txt  array.c  array.h  crypto.h  crypto_defs.h  crypto_openssl.c  crypto_openssl.h  crypto_ossl.c  crypto_wolfssl.c  crypto_wolfssl.h  crypto_wssl.c  keyvalue.c  keyvalue.h  list.c  list.h  request.c  serialize.c  serialize.h  voucher.c  voucher.h  voucher_crypto.h  voucher_crypto_ossl.c  voucher_defs.h  voucher_impl.h  voucher_request.c  voucher_request.h  vutils.c  vutils.h
tests/: CMakeLists.txt
tests/brski/: CMakeLists.txt  test-config-add.ini.in  test-config.ini.in  test_pledge_utils.c
tests/brski/brski-test-certs/: cms-ca.crt  cms-ca.key  idevid-ca.crt  idevid-ca.key  idevid.crt  idevid.key  int1-cms.crt  int1-cms.key  int2-cms.crt  int2-cms.key  ldevid-ca.crt  ldevid-ca.key  masa-ca.crt  masa-ca.key  masa-cms.crt  masa-cms.key  masa-intermediate1.crt  masa-intermediate1.key  masa-intermediate2.crt  masa-intermediate2.key  masa-tls-ca.crt  masa-tls-ca.key  masa-tls.crt  masa-tls.key  pledge-cms-add1.crt  pledge-cms-add1.key  pledge-cms-add2.crt  pledge-cms-add2.key  pledge-cms-ca.crt  pledge-cms-ca.key  pledge-cms.crt  pledge-cms.key  registrar-cms.crt  registrar-cms.key  registrar-tls-ca.crt  registrar-tls-ca.key  registrar-tls.crt  registrar-tls.key  tls-ca.crt  tls-ca.key
tests/voucher/: CMakeLists.txt  generate_test_certs.c  test_array.c  test_crypto.c  test_keyvalue.c  test_list.c  test_request.c  test_serialize.c  test_voucher.c  test_voucher_request.c  test_vutils.c
